fix: hide overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
@@ -46,6 +47,7 @@ body {
   font-weight: 400;
   line-height: 1.6;
   height: 100dvh;
+  overscroll-behavior: none;
 }
 
 .hidden {
